--- a/src/main/resources/assets/cyclic/lang/en_us.json
+++ b/src/main/resources/assets/cyclic/lang/en_us.json
@@ -1076,6 +1076,7 @@
     "block.cyclic.user.guide": "The Item User is a powerful machine that uses the item given to it to right click the block in front of it with a configurable delay.",
     "block.cyclic.user.delay": "Tick Delay",
     "block.cyclic.user.hand": "Use Left Hand",
+    "block.cyclic.user.sneak": "Shift-click",
 
     "enchantment_stack.empty": "Empty; use an enchanted book to store",
     "block.cyclic.screen": "Text Projector",
